src/test/deca/context/invalid/class/22_methodeCallReturnTypeIncorrect.deca
/* Description:
    test invalide en utilisant methodeCall
    (la methode appelé renvoie un type inattendu dans un assignement)



    Historique:
      cree le 18/01/2020
*/

   class A {
    int y = 4;

      int getY() {
        return this.y;
      }

   }

{
   A a = new A ();
   boolean x;
   x = a.getY();
}
